--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="search-box">
       <input type="text" placeholder="Enter city name" class="input-box">
       <img src="image/location.png" alt="Search Icon" class="search-icon">
-      <button><img src="/image/Search.png" alt="Search"></button>
+      <button><img src="image/Search.png" alt="Search"></button>
     </div>
     <div class="weather-body">
       <p class="city">Delhi</p>
@@ -34,7 +34,7 @@
           <p>Humidity</p>
         </div>
         <div class="wind">
-          <img src="/image/wind.png" alt="Wind">
+          <img src="image/wind.png" alt="Wind">
           <span></span>
           <p>Wind Speed</p>
         </div>
